--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body{
 
 .container {
     width: 400px;
-    height: 300px;
+    height: 450px;
     margin: 3rem auto;
     display: flex;
     flex-direction: column;
@@ -19,6 +19,10 @@ body{
     background-color: antiquewhite;
     border-radius: 0.5rem;
     color: cornflowerblue;
+}
+
+.container>p {
+    font-size: 35px;
 }
 
 h1 {
